core/api/mbink.h

// ========== 类型定义 ==========

typedef struct MBinkWindow* MBinkHandle;
typedef enum {
    MBINK_TYPE_NULL = 0,
    MBINK_TYPE_BOOL = 1,
    MBINK_TYPE_INT = 2,
    MBINK_TYPE_DOUBLE = 3,
    MBINK_TYPE_STRING = 4,
    MBINK_TYPE_ARRAY = 5,
    MBINK_TYPE_OBJECT = 6
} MBinkType;
typedef struct {
    const char* runtime_epoch;
    size_t max_nodes;
    int max_depth;
    const char* root_selector;
    bool include_screenshot;
    bool inline_screenshot;
    const char* screenshot_file;
} MBinkUiDevSnapshotOptions;
typedef struct {
    const char* bind_host;   /* nullptr/default = 127.0.0.1 */
    unsigned short port;     /* 0 = ephemeral port */
    const char* auth_token;  /* nullptr/empty = generated token when require_auth is true */
    bool require_auth;
} MBinkDevToolsHttpOptions;
typedef struct {
    unsigned short port;
    char* url;
    char* auth_token;
} MBinkDevToolsHttpInfo;
// 状态变更回调
typedef void (*MBinkStateCallback)(const char* name, const char* value_json,
                                     void* user_data);
// ========== DevTools ==========

MBINK_API int mbink_devtools_open(MBinkHandle handle);
MBINK_API int mbink_devtools_close(MBinkHandle handle);
MBINK_API MBinkDevToolsHttpOptions mbink_devtools_default_http_options(void);
MBINK_API int mbink_devtools_http_start(MBinkHandle handle,
                                        const MBinkDevToolsHttpOptions* options,
                                        MBinkDevToolsHttpInfo* out_info);
MBINK_API int mbink_devtools_http_stop(MBinkHandle handle);
MBINK_API void mbink_devtools_http_info_free(MBinkDevToolsHttpInfo* info);
// ========== UI Dev / Control ==========

MBINK_API MBinkUiDevSnapshotOptions mbink_ui_dev_default_snapshot_options(void);
MBINK_API int mbink_ui_dev_snapshot_json(MBinkHandle handle,
                                         const MBinkUiDevSnapshotOptions* options,
                                         char** out_json);
MBINK_API int mbink_ui_dev_snapshot_file(MBinkHandle handle,
                                         const char* output_path,
                                         const MBinkUiDevSnapshotOptions* options);
MBINK_API int mbink_ui_dev_command_json(MBinkHandle handle,
                                        const char* command_json,
                                        char** out_response_json);
// ========== 状态查询 ==========

MBINK_API bool mbink_state_exists(MBinkHandle handle, const char* name);
MBINK_API MBinkType mbink_state_type(MBinkHandle handle,
                                           const char* name);
MBINK_API void mbink_state_delete(MBinkHandle handle, const char* name);
// ========== 状态读取（直接类型，无需 free） ==========

MBINK_API bool mbink_state_get_bool(MBinkHandle handle, const char* name);
MBINK_API int64_t mbink_state_get_int(MBinkHandle handle,
                                          const char* name);
MBINK_API double mbink_state_get_double(MBinkHandle handle,
                                            const char* name);
MBINK_API const char* mbink_state_get_string(MBinkHandle handle,
                                                 const char* name);
MBINK_API int mbink_state_get_length(MBinkHandle handle,
                                         const char* name);
// ========== 状态读取（JSON，需要 free） ==========

MBINK_API char* mbink_state_get_json(MBinkHandle handle,
                                         const char* name);
MBINK_API char* mbink_state_get_at(MBinkHandle handle, const char* name,
                                       int index);
MBINK_API char* mbink_state_get_key(MBinkHandle handle, const char* name,
                                        const char* key);
// ========== 状态写入（直接类型，线程安全） ==========

MBINK_API int mbink_state_set_null(MBinkHandle handle, const char* name);
MBINK_API int mbink_state_set_bool(MBinkHandle handle, const char* name,
                                       bool value);
MBINK_API int mbink_state_set_int(MBinkHandle handle, const char* name,
                                      int64_t value);
MBINK_API int mbink_state_set_double(MBinkHandle handle, const char* name,
                                         double value);
MBINK_API int mbink_state_set_string(MBinkHandle handle, const char* name,
                                         const char* value);
MBINK_API int mbink_state_set_json(MBinkHandle handle, const char* name,
                                       const char* json);
// ========== 数组操作（线程安全） ==========

MBINK_API int mbink_state_array_push(MBinkHandle handle, const char* name,
                                         const char* item_json);
MBINK_API int mbink_state_array_push_int(MBinkHandle handle,
                                             const char* name, int64_t value);
MBINK_API int mbink_state_array_push_double(MBinkHandle handle,
                                                const char* name, double value);
MBINK_API int mbink_state_array_push_string(MBinkHandle handle,
                                                const char* name,
                                                const char* value);
MBINK_API int mbink_state_array_push_bool(MBinkHandle handle,
                                              const char* name, bool value);
MBINK_API int mbink_state_array_pop(MBinkHandle handle, const char* name);
MBINK_API int mbink_state_array_shift(MBinkHandle handle,
                                          const char* name);
MBINK_API int mbink_state_array_unshift(MBinkHandle handle,
                                            const char* name,
                                            const char* item_json);
MBINK_API int mbink_state_array_remove(MBinkHandle handle,
                                           const char* name, int index);
MBINK_API int mbink_state_array_clear(MBinkHandle handle,
                                          const char* name);
MBINK_API int mbink_state_array_set(MBinkHandle handle, const char* name,
                                        int index, const char* item_json);
MBINK_API int mbink_state_array_set_int(MBinkHandle handle,
                                            const char* name, int index,
                                            int64_t value);
MBINK_API int mbink_state_array_set_double(MBinkHandle handle,
                                               const char* name, int index,
                                               double value);
MBINK_API int mbink_state_array_set_string(MBinkHandle handle,
                                               const char* name, int index,
                                               const char* value);
// ========== 对象操作（线程安全） ==========

MBINK_API int mbink_state_object_set(MBinkHandle handle, const char* name,
                                         const char* key,
                                         const char* value_json);
MBINK_API int mbink_state_object_set_int(MBinkHandle handle,
                                             const char* name, const char* key,
                                             int64_t value);
MBINK_API int mbink_state_object_set_double(MBinkHandle handle,
                                                const char* name,
                                                const char* key, double value);
MBINK_API int mbink_state_object_set_string(MBinkHandle handle,
                                                const char* name,
                                                const char* key,
                                                const char* value);
MBINK_API int mbink_state_object_set_bool(MBinkHandle handle,
                                              const char* name, const char* key,
                                              bool value);
MBINK_API int mbink_state_object_remove(MBinkHandle handle,
                                            const char* name, const char* key);
MBINK_API int mbink_state_object_clear(MBinkHandle handle,
                                           const char* name);
// ========== 数值操作（线程安全，原子） ==========

MBINK_API int mbink_state_increment(MBinkHandle handle, const char* name,
                                        double delta);
MBINK_API int mbink_state_multiply(MBinkHandle handle, const char* name,
                                       double factor);
// ========== 字符串操作（线程安全） ==========

MBINK_API int mbink_state_string_append(MBinkHandle handle,
                                            const char* name,
                                            const char* suffix);
MBINK_API int mbink_state_string_prepend(MBinkHandle handle,
                                             const char* name,
                                             const char* prefix);
// ========== 监听 ==========

MBINK_API int mbink_state_watch(MBinkHandle handle, const char* name,
                                    MBinkStateCallback callback,
                                    void* user_data);
MBINK_API void mbink_state_unwatch(MBinkHandle handle, int watch_id);
// ========== 批量操作 ==========

MBINK_API void mbink_state_batch_begin(MBinkHandle handle);
MBINK_API void mbink_state_batch_end(MBinkHandle handle);
// ========== 队列控制 ==========

MBINK_API void mbink_state_set_merge_mode(MBinkHandle handle,
                                              bool enable);
MBINK_API int mbink_process_queue(MBinkHandle handle);
MBINK_API int mbink_queue_size(MBinkHandle handle);
// ========== 共享 C 对象 (SharedObject) ==========
//
// 核心思想：Python/JS 共享同一个 QuickJS JSValue 对象。
// - Python 通过 ctypes 调用 set/get 操作同一个 C 对象
// - JS 通过 globalThis.<name> 直接读写同一个对象
// - Python 写入后自动触发 JS 内部 shared update 调度 → UI 刷新
//
// 用法：
//   Python: data = app.shared("data"); data.count = 0
//   JS:     data.count  →  0
//           py.increment()  →  Python: data.count += 1  →  UI 自动更新

// 不透明句柄
typedef struct MBinkSharedObject* MBinkSharedHandle;
typedef struct MBinkLogViewObject* MBinkLogViewHandle;
typedef struct MBinkTerminalObject* MBinkTerminalHandle;
// 创建共享对象，注册为 JS globalThis.<name>
MBINK_API MBinkSharedHandle mbink_shared_create(MBinkHandle handle,
                                                       const char* name);
// 销毁共享对象
MBINK_API void mbink_shared_destroy(MBinkSharedHandle shared);
// ---- 类型化 setter（自动触发内部 shared update 调度） ----

MBINK_API int mbink_shared_set_int(MBinkSharedHandle shared,
                                        const char* key, int64_t value);
MBINK_API int mbink_shared_set_double(MBinkSharedHandle shared,
                                           const char* key, double value);
MBINK_API int mbink_shared_set_string(MBinkSharedHandle shared,
                                           const char* key, const char* value);
MBINK_API int mbink_shared_set_bool(MBinkSharedHandle shared,
                                         const char* key, bool value);
MBINK_API int mbink_shared_set_null(MBinkSharedHandle shared,
                                         const char* key);
MBINK_API int mbink_shared_set_json(MBinkSharedHandle shared,
                                         const char* key, const char* json_str);
// ---- 类型化 getter ----

MBINK_API int64_t mbink_shared_get_int(MBinkSharedHandle shared,
                                            const char* key);
MBINK_API double mbink_shared_get_double(MBinkSharedHandle shared,
                                              const char* key);
// 返回值由调用者通过 mbink_free() 释放
MBINK_API const char* mbink_shared_get_string(MBinkSharedHandle shared,
                                                    const char* key);
MBINK_API bool mbink_shared_get_bool(MBinkSharedHandle shared,
                                          const char* key);
// 返回 JSON 字符串，调用者通过 mbink_free() 释放
MBINK_API const char* mbink_shared_get_json(MBinkSharedHandle shared,
                                                  const char* key);
// ---- 属性查询 ----

MBINK_API int mbink_shared_get_type(MBinkSharedHandle shared,
                                         const char* key);
MBINK_API int mbink_shared_delete(MBinkSharedHandle shared,
                                       const char* key);
MBINK_API bool mbink_shared_has(MBinkSharedHandle shared,
                                     const char* key);
// ---- 批量更新（抑制中间 shared update 调用） ----

MBINK_API void mbink_shared_batch_begin(MBinkSharedHandle shared);
MBINK_API void mbink_shared_batch_end(MBinkSharedHandle shared);
// ========== 原生 UI 对象句柄（LogView / Terminal） ==========

MBINK_API MBinkLogViewHandle mbink_logview_get(MBinkHandle handle,
                                                    const char* element_id);
MBINK_API void mbink_logview_destroy(MBinkLogViewHandle logview);
MBINK_API int mbink_logview_append(MBinkLogViewHandle logview,
                                        const char* level,
                                        const char* source,
                                        const char* message);
MBINK_API void mbink_logview_clear(MBinkLogViewHandle logview);
MBINK_API const char* mbink_logview_export(MBinkLogViewHandle logview,
                                                const char* format);
MBINK_API MBinkTerminalHandle mbink_terminal_get(MBinkHandle handle,
                                                      const char* element_id);
MBINK_API void mbink_terminal_destroy(MBinkTerminalHandle terminal);
MBINK_API int mbink_terminal_write(MBinkTerminalHandle terminal,
                                        const char* data);
MBINK_API void mbink_terminal_clear(MBinkTerminalHandle terminal);
MBINK_API int mbink_terminal_execute(MBinkTerminalHandle terminal,
                                          const char* command);
MBINK_API int mbink_terminal_start_shell(MBinkTerminalHandle terminal,
                                              const char* shell);
MBINK_API int mbink_terminal_send_input(MBinkTerminalHandle terminal,
                                             const char* input);
MBINK_API void mbink_terminal_resize(MBinkTerminalHandle terminal,
                                          int rows, int cols);
MBINK_API const char* mbink_terminal_serialize(MBinkTerminalHandle terminal);
// ========== 工具函数 ==========

// 拷贝字符串到 MBink 运行时分配的内存；调用者需通过 mbink_free() 释放
MBINK_API char* mbink_copy_string(const char* str);
MBINK_API void mbink_free(void* ptr);