bindings/rust/mbink-sys/src/lib.rs


    pub fn mbink_state_exists(handle: MBinkHandle, name: *const c_char) -> bool;
    pub fn mbink_state_type(handle: MBinkHandle, name: *const c_char) -> MBinkType;
    pub fn mbink_state_delete(handle: MBinkHandle, name: *const c_char);
    pub fn mbink_state_get_bool(handle: MBinkHandle, name: *const c_char) -> bool;
    pub fn mbink_state_get_int(handle: MBinkHandle, name: *const c_char) -> i64;
    pub fn mbink_state_get_double(handle: MBinkHandle, name: *const c_char) -> f64;
    pub fn mbink_state_get_string(handle: MBinkHandle, name: *const c_char) -> *const c_char;
    pub fn mbink_state_get_length(handle: MBinkHandle, name: *const c_char) -> c_int;
    pub fn mbink_state_get_json(handle: MBinkHandle, name: *const c_char) -> *mut c_char;
    pub fn mbink_state_get_at(
        handle: MBinkHandle,
        name: *const c_char,
        index: c_int,
    ) -> *mut c_char;
    pub fn mbink_state_get_key(
        handle: MBinkHandle,
        name: *const c_char,
        key: *const c_char,
    ) -> *mut c_char;
    pub fn mbink_state_set_null(handle: MBinkHandle, name: *const c_char) -> c_int;
    pub fn mbink_state_set_bool(handle: MBinkHandle, name: *const c_char, value: bool) -> c_int;
    pub fn mbink_state_set_int(handle: MBinkHandle, name: *const c_char, value: i64) -> c_int;
    pub fn mbink_state_set_double(handle: MBinkHandle, name: *const c_char, value: f64) -> c_int;
    pub fn mbink_state_set_string(
        handle: MBinkHandle,
        name: *const c_char,
        value: *const c_char,
    ) -> c_int;
    pub fn mbink_state_set_json(
        handle: MBinkHandle,
        name: *const c_char,
        json: *const c_char,
    ) -> c_int;
    pub fn mbink_state_array_push(
        handle: MBinkHandle,
        name: *const c_char,
        item_json: *const c_char,
    ) -> c_int;
    pub fn mbink_state_array_push_int(
        handle: MBinkHandle,
        name: *const c_char,
        value: i64,
    ) -> c_int;
    pub fn mbink_state_array_push_double(
        handle: MBinkHandle,
        name: *const c_char,
        value: f64,
    ) -> c_int;
    pub fn mbink_state_array_push_string(
        handle: MBinkHandle,
        name: *const c_char,
        value: *const c_char,
    ) -> c_int;
    pub fn mbink_state_array_push_bool(
        handle: MBinkHandle,
        name: *const c_char,
        value: bool,
    ) -> c_int;
    pub fn mbink_state_array_pop(handle: MBinkHandle, name: *const c_char) -> c_int;
    pub fn mbink_state_array_shift(handle: MBinkHandle, name: *const c_char) -> c_int;
    pub fn mbink_state_array_unshift(
        handle: MBinkHandle,
        name: *const c_char,
        item_json: *const c_char,
    ) -> c_int;
    pub fn mbink_state_array_remove(
        handle: MBinkHandle,
        name: *const c_char,
        index: c_int,
    ) -> c_int;
    pub fn mbink_state_array_clear(handle: MBinkHandle, name: *const c_char) -> c_int;
    pub fn mbink_state_array_set(
        handle: MBinkHandle,
        name: *const c_char,
        index: c_int,
        item_json: *const c_char,
    ) -> c_int;
    pub fn mbink_state_array_set_int(
        handle: MBinkHandle,
        name: *const c_char,
        index: c_int,
        value: i64,
    ) -> c_int;
    pub fn mbink_state_array_set_double(
        handle: MBinkHandle,
        name: *const c_char,
        index: c_int,
        value: f64,
    ) -> c_int;
    pub fn mbink_state_array_set_string(
        handle: MBinkHandle,
        name: *const c_char,
        index: c_int,
        value: *const c_char,
    ) -> c_int;
    pub fn mbink_state_object_set(
        handle: MBinkHandle,
        name: *const c_char,
        key: *const c_char,
        value_json: *const c_char,
    ) -> c_int;
    pub fn mbink_state_object_set_int(
        handle: MBinkHandle,
        name: *const c_char,
        key: *const c_char,
        value: i64,
    ) -> c_int;
    pub fn mbink_state_object_set_double(
        handle: MBinkHandle,
        name: *const c_char,
        key: *const c_char,
        value: f64,
    ) -> c_int;
    pub fn mbink_state_object_set_string(
        handle: MBinkHandle,
        name: *const c_char,
        key: *const c_char,
        value: *const c_char,
    ) -> c_int;
    pub fn mbink_state_object_set_bool(
        handle: MBinkHandle,
        name: *const c_char,
        key: *const c_char,
        value: bool,
    ) -> c_int;
    pub fn mbink_state_object_remove(
        handle: MBinkHandle,
        name: *const c_char,
        key: *const c_char,
    ) -> c_int;
    pub fn mbink_state_object_clear(handle: MBinkHandle, name: *const c_char) -> c_int;
    pub fn mbink_state_increment(handle: MBinkHandle, name: *const c_char, delta: f64) -> c_int;
    pub fn mbink_state_multiply(handle: MBinkHandle, name: *const c_char, factor: f64) -> c_int;
    pub fn mbink_state_string_append(
        handle: MBinkHandle,
        name: *const c_char,
        suffix: *const c_char,
    ) -> c_int;
    pub fn mbink_state_string_prepend(
        handle: MBinkHandle,
        name: *const c_char,
        prefix: *const c_char,
    ) -> c_int;
    pub fn mbink_state_watch(
        handle: MBinkHandle,
        name: *const c_char,
        callback: MBinkStateCallback,
        user_data: *mut c_void,
    ) -> c_int;
    pub fn mbink_state_unwatch(handle: MBinkHandle, watch_id: c_int);
    pub fn mbink_state_batch_begin(handle: MBinkHandle);
    pub fn mbink_state_batch_end(handle: MBinkHandle);
    pub fn mbink_state_set_merge_mode(handle: MBinkHandle, enable: bool);
    pub fn mbink_process_queue(handle: MBinkHandle) -> c_int;
    pub fn mbink_queue_size(handle: MBinkHandle) -> c_int;

    pub fn mbink_shared_create(handle: MBinkHandle, name: *const c_char) -> MBinkSharedHandle;
    pub fn mbink_shared_destroy(shared: MBinkSharedHandle);
    pub fn mbink_shared_set_int(shared: MBinkSharedHandle, key: *const c_char, value: i64)
        -> c_int;
    pub fn mbink_shared_set_double(
        shared: MBinkSharedHandle,
        key: *const c_char,
        value: f64,
    ) -> c_int;
    pub fn mbink_shared_set_string(
        shared: MBinkSharedHandle,
        key: *const c_char,
        value: *const c_char,
    ) -> c_int;
    pub fn mbink_shared_set_bool(
        shared: MBinkSharedHandle,
        key: *const c_char,
        value: bool,
    ) -> c_int;
    pub fn mbink_shared_set_null(shared: MBinkSharedHandle, key: *const c_char) -> c_int;
    pub fn mbink_shared_set_json(
        shared: MBinkSharedHandle,
        key: *const c_char,
        json: *const c_char,
    ) -> c_int;
    pub fn mbink_shared_get_int(shared: MBinkSharedHandle, key: *const c_char) -> i64;
    pub fn mbink_shared_get_double(shared: MBinkSharedHandle, key: *const c_char) -> f64;
    pub fn mbink_shared_get_string(shared: MBinkSharedHandle, key: *const c_char) -> *mut c_char;
    pub fn mbink_shared_get_bool(shared: MBinkSharedHandle, key: *const c_char) -> bool;
    pub fn mbink_shared_get_json(shared: MBinkSharedHandle, key: *const c_char) -> *mut c_char;
    pub fn mbink_shared_get_type(shared: MBinkSharedHandle, key: *const c_char) -> c_int;
    pub fn mbink_shared_delete(shared: MBinkSharedHandle, key: *const c_char) -> c_int;
    pub fn mbink_shared_has(shared: MBinkSharedHandle, key: *const c_char) -> bool;
    pub fn mbink_shared_batch_begin(shared: MBinkSharedHandle);
    pub fn mbink_shared_batch_end(shared: MBinkSharedHandle);

    pub fn mbink_logview_get(handle: MBinkHandle, element_id: *const c_char) -> MBinkLogViewHandle;
    pub fn mbink_logview_destroy(logview: MBinkLogViewHandle);
    pub fn mbink_logview_append(
        logview: MBinkLogViewHandle,
        level: *const c_char,
        source: *const c_char,
        message: *const c_char,
    ) -> c_int;
    pub fn mbink_logview_clear(logview: MBinkLogViewHandle);
    pub fn mbink_logview_export(logview: MBinkLogViewHandle, format: *const c_char) -> *mut c_char;

    pub fn mbink_terminal_get(
        handle: MBinkHandle,
        element_id: *const c_char,
    ) -> MBinkTerminalHandle;
    pub fn mbink_terminal_destroy(terminal: MBinkTerminalHandle);
    pub fn mbink_terminal_write(terminal: MBinkTerminalHandle, data: *const c_char) -> c_int;
    pub fn mbink_terminal_clear(terminal: MBinkTerminalHandle);
    pub fn mbink_terminal_execute(terminal: MBinkTerminalHandle, command: *const c_char) -> c_int;
    pub fn mbink_terminal_start_shell(terminal: MBinkTerminalHandle, shell: *const c_char)
        -> c_int;
    pub fn mbink_terminal_send_input(terminal: MBinkTerminalHandle, input: *const c_char) -> c_int;
    pub fn mbink_terminal_resize(terminal: MBinkTerminalHandle, rows: c_int, cols: c_int);
    pub fn mbink_terminal_serialize(terminal: MBinkTerminalHandle) -> *mut c_char;

    pub fn mbink_copy_string(str_: *const c_char) -> *mut c_char;
    pub fn mbink_free(ptr: *mut c_void);
}

#[cfg(not(all(target_os = "windows", mbink_runtime_load)))]
struct DevtoolsApi {
    _lib: libloading::Library,
    mbink_devtools_open: unsafe extern "C" fn(MBinkHandle) -> c_int,
    mbink_devtools_close: unsafe extern "C" fn(MBinkHandle) -> c_int,
    mbink_devtools_default_http_options: unsafe extern "C" fn() -> MBinkDevToolsHttpOptions,
    mbink_devtools_http_start: unsafe extern "C" fn(
        MBinkHandle,
        *const MBinkDevToolsHttpOptions,
        *mut MBinkDevToolsHttpInfo,
    ) -> c_int,
    mbink_devtools_http_stop: unsafe extern "C" fn(MBinkHandle) -> c_int,
    mbink_devtools_http_info_free: unsafe extern "C" fn(*mut MBinkDevToolsHttpInfo),
    mbink_ui_dev_default_snapshot_options: unsafe extern "C" fn() -> MBinkUiDevSnapshotOptions,
    mbink_ui_dev_snapshot_json: unsafe extern "C" fn(
        MBinkHandle,
        *const MBinkUiDevSnapshotOptions,
        *mut *mut c_char,
    ) -> c_int,
    mbink_ui_dev_snapshot_file:
        unsafe extern "C" fn(MBinkHandle, *const c_char, *const MBinkUiDevSnapshotOptions) -> c_int,
    mbink_ui_dev_command_json:
        unsafe extern "C" fn(MBinkHandle, *const c_char, *mut *mut c_char) -> c_int,
}

#[cfg(not(all(target_os = "windows", mbink_runtime_load)))]
static DEVTOOLS_API: OnceLock<DevtoolsApi> = OnceLock::new();

#[cfg(not(all(target_os = "windows", mbink_runtime_load)))]
fn devtools_api() -> &'static DevtoolsApi {
    DEVTOOLS_API.get_or_init(|| unsafe { load_devtools_api() })
}

#[cfg(not(all(target_os = "windows", mbink_runtime_load)))]
unsafe fn load_devtools_api() -> DevtoolsApi {
    let path = devtools_library_path();
    let lib = libloading::Library::new(&path).unwrap_or_else(|err| {
        panic!(
            "failed to load mbink_devtools dynamic library at {}: {err}",
            path.display()
        )
    });

    macro_rules! load {
        ($name:literal, $ty:ty) => {{
            *lib.get::<$ty>($name).unwrap_or_else(|err| {
                panic!(
                    "failed to load symbol {} from {}: {err}",
                    String::from_utf8_lossy($name),
                    path.display()
                )
            })
        }};
    }
